--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -33,7 +33,14 @@
     "print(f\"Data path: {data_path}\")\n",
     "\n",
     "# auto reload any changes in the module\n",
-    "%load_ext autoreload"
+    "%load_ext autoreload\n",
+    "\n",
+    "# ignore some warnings\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "# ignore SettingWithCopyWarning\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
