--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -252,7 +252,6 @@
     "# calculate the total kbtu/ft2 for each building\n",
     "cbecs2018[\"total_kbtu_ft2\"] = cbecs2018[\"MFBTU\"] / cbecs2018[\"SQFT\"]\n",
     "\n",
-    "\n",
     "# create the kde plot of all kbtu/ft2\n",
     "sns.kdeplot(cbecs2018[\"total_kbtu_ft2\"], fill=True)\n",
     "\n",
@@ -287,7 +286,7 @@
     "# ESPM Colorado Site EUI\n",
     "https://portfoliomanager.energystar.gov/dataExplorer/?_gl=1*1cjut0r*_ga*NzE4OTQ5MDM4LjE3MjM1ODY2NzY.*_ga_S0KJTVVLQ6*MTcyMzU4NjY3Ni4xLjAuMTcyMzU4NjY3Ni4wLjAuMA..\n",
     "\n",
-    "![image.png](attachment:image.png){ width=50% }\n"
+    "![image.png](attachment:image.png)\n"
    ]
   },
   {
