--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -36,7 +36,6 @@
     "figures_path = Path().resolve() / \"figures\"\n",
     "print(f\"Figures path: {figures_path}\")\n",
     "\n",
-    "\n",
     "# auto reload any changes in the module\n",
     "%load_ext autoreload\n",
     "\n",
@@ -68,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %run comstock_processor.py"
+    "%run comstock_processor.py"
    ]
   },
   {
@@ -110,7 +109,8 @@
    "source": [
     "# save the names of the fields to a list\n",
     "fields = df_all.columns\n",
-    "open(data_path / \"fields.txt\", \"w\").write(\"\\n\".join(fields))\n",
+    "with open(data_path / \"fields.txt\", \"w\") as f:\n",
+    "    f.write(\"\\n\".join(fields))\n",
     "\n",
     "# force the climate zone to be a string\n",
     "df_all[\"in.ashrae_iecc_climate_zone_2006\"] = df_all[\"in.ashrae_iecc_climate_zone_2006\"].astype(str)\n",
@@ -1200,7 +1200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.12.1-comstock",
+   "display_name": "3.10.6-general",
    "language": "python",
    "name": "python3"
   },
@@ -1214,7 +1214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
