--- a/analysis_california_eci.ipynb
+++ b/analysis_california_eci.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "# calculate the of buildings in each 'in.comstock_building_type'\n",
-    "print(df_ca[\"in.comstock_building_type\"].value_counts())\n",
+    "# print(df_ca[\"in.comstock_building_type\"].value_counts())\n",
     "\n",
     "county_counts = df_ca[\"in.county_name\"].value_counts()\n",
     "# make it a dataframe\n",
@@ -137,7 +137,10 @@
     "# and trim the remainder\n",
     "county_counts[\"in.county_name\"] = county_counts[\"in.county_name\"].str.strip()\n",
     "\n",
-    "display(county_counts)  # print(df_ca[\"in.county_name\"].value_counts())"
+    "# display the counts nicely, but with no index\n",
+    "display(county_counts)\n",
+    "\n",
+    "# display(county_counts)  # print(df_ca[\"in.county_name\"].value_counts())"
    ]
   },
   {
@@ -206,7 +209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10.6-general",
+   "display_name": "3.12.7-compare",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
