add in pie charts for CA

--- a/analysis_california_eci.ipynb
+++ b/analysis_california_eci.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "from IPython.display import HTML\n",
     "\n",
     "# Allow autoreload as we develop the GMT in parallel\n",
     "%load_ext autoreload\n",
@@ -100,7 +100,7 @@
    "source": [
     "# save the names of the fields to a list\n",
     "fields = df_all.columns\n",
-    "with open(figures_path / \"fields.txt\", \"w\") as f:\n",
+    "with open(data_path / \"fields.txt\", \"w\") as f:\n",
     "    f.write(\"\\n\".join(fields))"
    ]
   },
@@ -110,14 +110,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find if climate zone 7A or 7B or 7\n",
+    "# only buildings in CA\n",
     "df_ca = df_all[df_all[\"in.state\"].str.contains(\"CA\")]\n",
-    "print(df_ca[\"in.building_subtype\"].unique())\n",
-    "print(df_ca[\"in.comstock_building_type\"].unique())\n",
-    "print(df_ca[\"in.county_name\"].unique())\n",
-    "# print the dimensions for each dataframe\n",
     "print(f\"all: {df_all.shape}\")\n",
-    "print(f\"cz7: {df_ca.shape}\")"
+    "print(f\"cz7: {df_ca.shape}\")\n",
+    "for to_display in [\"in.building_subtype\", \"in.comstock_building_type\"]:\n",
+    "    df_to_show = df_ca[to_display].value_counts()\n",
+    "    df_to_show = df_to_show.reset_index()\n",
+    "    display(HTML(df_to_show.to_html(index=False, border=1)))"
    ]
   },
   {
@@ -138,9 +138,7 @@
     "county_counts[\"in.county_name\"] = county_counts[\"in.county_name\"].str.strip()\n",
     "\n",
     "# display the counts nicely, but with no index\n",
-    "display(county_counts)\n",
-    "\n",
-    "# display(county_counts)  # print(df_ca[\"in.county_name\"].value_counts())"
+    "display(HTML(county_counts.to_html(index=False, border=1)))"
    ]
   },
   {
@@ -170,7 +168,7 @@
     "    missing_kwds={\"color\": \"lightgrey\"},\n",
     "    ax=ax,\n",
     ")\n",
-    "plt.title(\"California Buildings with Counts\", fontsize=16)\n",
+    "plt.title(\"Count of ComStock Buildings in CA\", fontsize=16)\n",
     "plt.show()\n",
     "\n",
     "# create another plot but without Los Angeles\n",
@@ -182,7 +180,7 @@
     "    missing_kwds={\"color\": \"lightgrey\"},\n",
     "    ax=ax,\n",
     ")\n",
-    "plt.title(\"California Buildings (without LA) with Counts\", fontsize=16)"
+    "plt.title(\"Count of ComStock Buildings in CA (without LA)\", fontsize=16)"
    ]
   },
   {
@@ -191,19 +189,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ca[\"EUI_kBTUft2\"] = df_ca[\"out.site_energy.total.energy_consumption_intensity\"] * 3.412\n",
+    "# create a pie chart of the total energy in kWh of district cooling, district heating, electricity, natural gas\n",
+    "meters = [\n",
+    "    \"out.district_cooling.total.energy_consumption\",\n",
+    "    \"out.district_heating.total.energy_consumption\",\n",
+    "    \"out.electricity.total.energy_consumption\",\n",
+    "    \"out.natural_gas.total.energy_consumption\",\n",
+    "    \"out.other_fuel.total.energy_consumption\",\n",
+    "]\n",
     "\n",
-    "# return the quartiles of the column out.site_energy.total.energy_consumption_intensity\n",
-    "print(df_ca[\"EUI_kBTUft2\"].describe())\n",
-    "print(df_ca[\"out.site_energy.total.energy_consumption_intensity\"].describe())\n",
-    "df_ca[\"EUI_distcool_kBTUft2\"] = (\n",
-    "    df_ca[\"calc.enduse_group.district_cooling.hvac.energy_consumption..kwh\"] / df_ca[\"in.sqft\"]\n",
-    ") * 3.412  # from kwh/ft2 to kbtu/ft2\n",
-    "print(df_ca[\"EUI_distcool_kBTUft2\"].describe())\n",
+    "# create a new dataframe with the sum of each meter\n",
+    "df_meters = df_ca[meters].sum()\n",
+    "print(df_meters)\n",
+    "# rename the columns to be shorter, electricity, natural gas, distirct heating,\n",
+    "# district cooling, and other fuel\n",
+    "df_meters = df_meters.rename(\n",
+    "    {\n",
+    "        \"out.district_cooling.total.energy_consumption\": \"District Cooling\",\n",
+    "        \"out.district_heating.total.energy_consumption\": \"District Heating\",\n",
+    "        \"out.electricity.total.energy_consumption\": \"Electricity\",\n",
+    "        \"out.natural_gas.total.energy_consumption\": \"Natural Gas\",\n",
+    "        \"out.other_fuel.total.energy_consumption\": \"Other Fuel\",\n",
+    "    }\n",
+    ")\n",
     "\n",
-    "# plot just distcool\n",
-    "sns.kdeplot(df_ca[\"EUI_distcool_kBTUft2\"])\n",
-    "plt.xlim(-10, 25)"
+    "\n",
+    "# plot the meter totals as a pie chart\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "plt.pie(df_meters, labels=df_meters.index, autopct=\"%1.1f%%\")\n",
+    "plt.title(\"ComStock - Energy Consumption by Meter Type\", fontsize=16)\n",
+    "\n",
+    "# now show the heating fuel type by count\n",
+    "df_heating = df_ca[\"in.heating_fuel\"].value_counts()\n",
+    "df_heating = df_heating.reset_index()\n",
+    "display(HTML(df_heating.to_html(index=False, border=1)))\n",
+    "# make a pie chart of count of heating fuels\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "plt.pie(df_heating[\"count\"], labels=df_heating[\"in.heating_fuel\"], autopct=\"%1.1f%%\")\n",
+    "plt.title(\"ComStock - Heating Fuel Type by Count\", fontsize=16)"
    ]
   }
  ],
