--- a/analysis_california_eci.ipynb
+++ b/analysis_california_eci.ipynb
@@ -231,11 +231,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "3.12.7-compare",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -245,8 +240,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
