cleanup std100 directory

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -331,15 +331,9 @@
    "outputs": [],
    "source": [
     "# Read in std data\n",
-    "std100_25th_percentile = pd.read_excel(\n",
-    "    dataset_path / \"std100\" / \"std100data_percentiles_allclimatezones_allbuildingtypes.xlsx\", sheet_name=\"25thPercentile\"\n",
-    ")\n",
-    "std100_40th_percentile = pd.read_excel(\n",
-    "    dataset_path / \"std100\" / \"std100data_percentiles_allclimatezones_allbuildingtypes.xlsx\", sheet_name=\"40thPercentile\"\n",
-    ")\n",
-    "std100_50th_percentile = pd.read_excel(\n",
-    "    dataset_path / \"std100\" / \"std100data_percentiles_allclimatezones_allbuildingtypes.xlsx\", sheet_name=\"50thPercentile\"\n",
-    ")\n",
+    "std100_25th_percentile = pd.read_excel(dataset_path / \"std100\" / \"std100data.xlsx\", sheet_name=\"site_energy_25th_percentile\")\n",
+    "std100_40th_percentile = pd.read_excel(dataset_path / \"std100\" / \"std100data.xlsx\", sheet_name=\"site_energy_40th_percentile\")\n",
+    "std100_50th_percentile = pd.read_excel(dataset_path / \"std100\" / \"std100data.xlsx\", sheet_name=\"site_energy_50th_percentile\")\n",
     "\n",
     "# display(std25thPercentile)\n",
     "\n",
@@ -369,7 +363,7 @@
     "    cbecs2018[\"PUBCLIM\"] = cbecs_climate_zone\n",
     "    cbecs2018_for_union = cbecs2018[[\"data_source\", \"EUI_kBTUft2\"]]\n",
     "\n",
-    "    # Comstock Data Handling:\n",
+    "    # ComStock Data Handling:\n",
     "    #   Filter just to climate zone\n",
     "    #   add in literal column for data_source for union and display in visualization\n",
     "    #   Select data needed for union and visualization\n",
