--- a/1_pull_data.ipynb
+++ b/1_pull_data.ipynb
@@ -191,11 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test the query builder\n",
-    "print(\"Testing GraphQL query builder...\")\n",
-    "\n",
-    "group_by = \"ptSubcategory\"\n",
-    "# group_by = \"ptCategory\"\n",
+    "# group_by = \"ptSubcategory\"\n",
+    "group_by = \"ptCategory\"\n",
     "metric = \"siteEui\"\n",
     "year_reported = 2023\n",
     "year_built_groups = [\"All\", \"2000-2009\", \"1946-1959\", \"1960-1979\", \"1980-1999\", \"2010 and after\", \"Before 1946\"]\n",
@@ -314,8 +311,11 @@
     "# replace 0-5 with 0-5\n",
     "all_energystar_data_clean[\"row_count\"] = all_energystar_data_clean[\"row_count\"].replace(\"0-5\", \"0-5\")\n",
     "\n",
+    "# sort by the `move_to_beginning` columns\n",
+    "all_energystar_data_clean = all_energystar_data_clean.sort_values(by=move_to_beginning)\n",
+    "\n",
     "# save the data to a CSV file\n",
-    "all_energystar_data_clean.to_csv(espm_path / \"energystar_data.csv\", index=False)\n",
+    "all_energystar_data_clean.to_csv(espm_path / \"energystar_site_eui_by_category.csv\", index=False)\n",
     "display(all_energystar_data_clean)"
    ]
   }
