no need to call python script by hand

--- a/2_analysis.ipynb
+++ b/2_analysis.ipynb
@@ -45,10 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pull down ComStock data\n",
-    "\n",
-    "To do this, you should be able to just simply run the `comstock_processor.py` file within VSCode. The data will be saved into \n",
-    "the ComStock subfolder. It takes a while to run (10ish minutes)."
+    "### Pull down ComStock data\n"
    ]
   },
   {
